# retail-sales-analytics

./: .env.example  .gitignore  README.md  docker-compose.yaml  example.env  main.py  pyproject.toml  start_docker.sh  stop_docker.sh
airflow/: Dockerfile  requirements.txt
airflow/dags/: create_dim_tables_taskflow.py  create_fact_table_taskflow.py  etl_minio_taskflow.py  full_pipeline_dag.py  upload_to_minio_taskflow.py
airflow/gx/: great_expectations.yml
airflow/gx/expectations/: .ge_store_backend_id
datasets/: olist_customers_dataset.csv  olist_geolocation_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv
minio/minio_data/retail/raw/olist_order_items_dataset.csv/8a04a98a-1437-4266-aef1-e1a66037e728/: part.1
minio/minio_data/retail/raw/olist_order_reviews_dataset.csv/dc5025aa-32b2-46b0-b261-3fd13583f409/: part.1
minio/minio_data/retail/raw/olist_orders_dataset.csv/e53195a6-c39f-400f-a5b6-4ce59e713145/: part.1
superset/: Dockerfile
