[project]
name = "retail-sales-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-expectations[postgresql]>=0.18.22",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pandas>=2.2.3",
    "polars>=1.30.0",
]
